2016-12-13 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-570

	* src/m_optproperties.cc (scat_dataCheck):
	Replaced check_type alternative 'none' by 'sane' (since it does not
	mean nothing is checked, but "only" sanity of K11,a1,Z11 is checked).

	* src/methods.cc (scat_dataCheck, cloudbox_checkedCalc, jacobianDoit):
	Adapted built-in doc according to above changes. Adapted jacobianDoit
	default setting of *check_type*.

	* src/m_cloudbox.cc (ScatElementsToabs_speciesAdd):
	Update *check_type* setting in internal call of scat_dataCheck.

2016-12-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-569

	* src/optproperties.cc (pha_mat_labCalc): Changed check to catch cases
	where no transformations are needed. Now just considers theta.

	Discovered that MC calculations converged very very poorly.
	After testing different arts versions, found that the change of
	this if-statement was the point where MC started to behave poorly.
	Right now I don't know if the if-statement was wrong, or if the
	change made some bug in MC visible. Needs to be investigated, but
	made this change to resurrect MC to its old behaviour.

2016-12-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-568

	* src/m_optproperties.cc (scat_dataCheck):

	Cleaner check for check_type argument. Must now be 'ALL' or 'NONE'.

	* src/mystring.h: New functions toupper and tolower for my_basic_string.

	* src/m_xml.{h,cc} (WriteXMLIndexed, ReadXMLIndexed),
	src/xml_io.cc (filename_xml_with_index):

	New argument digits that gives the desired width of the index. String
	of numbers with less digits will be padded with zeros.

	* src/m_jacobian.cc (jacobianDoit): Adapt calls to WriteXMLIndexed.

	* src/methods.cc:

	Add 'digits' argument to WriteXMLIndexed and ReadXMLIndexed.

	Update docs for scat_dataCheck.

	* src/m_linemixing.cc (abs_xsec_per_speciesAddLineMixedBands):

	Comment out parameter names in dummy function to avoid compiler
	warnings.
