@@ -12321,18 +12321,18 @@ void define_md_data_raw()
          "This function checks that *scat_data* does not contain any NaN and\n"
          "that the 'scalar' properties K11, Z11, and a1 are non-negative.\n"
          "\n"
-         "This function can furthermore check (when *check_type* set to\n"
-         "'all') that the scattering angle integrated scattering matrix\n"
-         "(int_Z11), which is supposed to be normalized to the scattering\n"
-         "cross section, is sufficiently consistent with the scattering\n"
-         "cross section (C_sca) derived from the difference of extinction\n"
-         "(K11) and absorption (a1): int_z11 ~ C_sca = K11-a1.\n"
-         "To skip this check, *check_type* should be set to 'sane'.\n"
+         "When *check_type* is 'all', this function checks that the solid\n"
+         "sphere integrated scattering matrix (int_Z11), which is supposed to\n"
+         "be normalized to the scattering cross section, is sufficiently\n"
+         "consistent with the scattering cross section (C_sca) derived from\n"
+         "the difference of extinction (K11) and absorption (a1):\n"
+         "int_z11 ~ C_sca = K11-a1.\n"
+         "The check is skipped if *check_type* is 'sane'.\n"
          "\n"
-         "'Sufficient' consistency is determined by *sca_mat_threshold*\n"
-         "testing the following condition:\n"
-         "  ( <int_Z11>/<C_sca>-1. ) * ( <C_sca>/<K11> ) > sca_mat_threshold\n"
-         "Note that in this case, *sca_mat_threshold is equivalent to the\n"
+         "Sufficient consistency is determined by *sca_mat_threshold*\n"
+         "testing that\n"
+         "  ( <int_Z11>/<C_sca>-1. ) * ( <C_sca>/<K11> ) <= sca_mat_threshold.\n"
+         "Note that in this case *sca_mat_threshold* is equivalent to the\n"
          "absolute scattering albedo deviation.\n"
          ),
         AUTHORS( "Claudia Emde", "Jana Mendrok" ),
